<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_register"
    tools:context=".loginandregister.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_register"
        android:fontFamily="@font/alata"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:textSize="24sp"
        android:drawableEnd="@drawable/shoe_register"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#E4941D"
        app:hintTextColor="#E4941D"
        android:layout_margin="@dimen/default_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="#E4941D"
            android:hint="@string/name_register"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#E4941D"
        app:hintTextColor="#E4941D"
        android:layout_margin="@dimen/default_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:textColor="#E4941D"
            android:hint="@string/hint_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#E4941D"
        app:hintTextColor="#E4941D"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#E4941D"
        android:layout_margin="@dimen/default_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#E4941D"
            android:hint="@string/password_text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/enjoy_button"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cornerRadius="@dimen/default_cornerRadius"
        android:backgroundTint="#E4941D"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/enjoy_button"
        android:text="@string/go_button"/>



</LinearLayout>
</layout>