<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcomeandinstrictions.InstructionsFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/instruction_screen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_in_instructions"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/alata"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_text"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/text_size"
        android:lineSpacingMultiplier="1"
        android:textColor="@color/black"
        android:fontFamily="@font/alata"
        android:textStyle="normal"
        android:layout_margin="@dimen/default_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_shopping_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cornerRadius="@dimen/default_cornerRadius"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/make_shopping_button"
        android:backgroundTint="#ECE0BD"/>

</LinearLayout>
</layout>