<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".addlist.AddShoeFragment">
    <data>

        <variable
            name="vm"
            type="com.example.shoeapp.addlist.ShoeViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_shoe_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_add_shoe_fragment"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_margin"
        android:fontFamily="@font/alata"
        android:textColor="@color/white"
        android:textStyle="bold"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/white"
        android:layout_margin="@dimen/default_margin"
        app:hintTextColor="@color/white"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_shoe_name"
            android:layout_width="match_parent"
            android:onTextChanged="@{(text,start,before,after)-> vm.newAddShoe.setShoeName(text.toString)}"
            android:hint="@string/name_add_shoe"
            android:textColor="@color/white"
            android:text="@={vm.newAddShoe.shoeName}"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/white"
        android:layout_margin="@dimen/default_margin"
        app:hintTextColor="@color/white"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_shoe_company"
            android:layout_width="match_parent"
           android:onTextChanged="@{(text,start,before,after)-> vm.newAddShoe.setCompany(text.toString)}"
            android:text="@={vm.newAddShoe.company}"
            android:hint="@string/add_shoe_company"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/white"
        android:layout_margin="@dimen/default_margin"
        app:hintTextColor="@color/white"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_shoe_size"
            android:layout_width="match_parent"
            android:hint="@string/add_shoe_size"
            android:onTextChanged="@{(text,start,before,after)-> vm.newAddShoe.setSize(text.toString)}"
            android:text="@={vm.newAddShoe.size}"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/white"
        android:layout_margin="@dimen/default_margin"
        app:hintTextColor="@color/white"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_shoe_description"
            android:text="@={vm.newAddShoe.description}"
            android:layout_width="match_parent"
            android:onTextChanged="@{(text,start,before,after)-> vm.newAddShoe.setDescription(text.toString)}"
            android:hint="@string/add_shoe_description"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_weight="1"
            android:backgroundTint="#4E4747"
            android:text="@string/add_shoe_in_add_fragment"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button_in_add_fragment"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_shoe_in_add_fragment"
            android:backgroundTint="#4E4747"
            android:textColor="@color/white"/>
    </LinearLayout>




</LinearLayout>
</layout>