<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoeapp.loginandregister.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:drawableEnd="@drawable/shoe"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/hello_text"
            android:textColor="#EF4B82"
            android:textSize="24sp"
            android:textStyle="italic"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:boxStrokeColor="#EF4B82"
            app:hintTextColor="#EF4B82">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textWebEmailAddress"
                android:textColor="#EF4B82"
                 />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:boxStrokeColor="#EF4B82"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#EF4B82"
            app:hintTextColor="#EF4B82">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textColor="#EF4B82"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:weightSum="2">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                app:cornerRadius="10dp"
                android:backgroundTint="#EF4B82"
                android:drawableEnd="@drawable/login_image_button"
                android:text="@string/Login_text"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/register_image_button"
                android:text="@string/register_text"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                android:backgroundTint="#D8B856"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</layout>